--- a/assets/localizations/strings_en.yaml
+++ b/assets/localizations/strings_en.yaml
@@ -44,6 +44,7 @@ feedback/sent: Your fedback was submitted. Thanks!
 # Food
 food: Food
 food/fragment.title: Today's menu
+food/offer: Offer
 
 # News
 news: News
