--- a/assets/localizations/strings_de.yaml
+++ b/assets/localizations/strings_de.yaml
@@ -38,7 +38,7 @@ feedback/action: Feedback senden
 feedback/message: Deine Nachricht
 feedback/message.missing: Bitte gib eine Nachricht ein
 feedback/includeLogs: Screenshots und Logdateien mitsenden
-feedback/includeLogs.desc: Empfohlen für Fehlermeldungen
+feedback/includeLogs.desc: Empfohlen bei Problemen
 feedback/sent: Ihr Feedback wurde abgeschickt. Vielen Dank!
 
 # Food
@@ -60,3 +60,28 @@ openHpi/fragment.title: openHPI-Kurse
 
 # Tools
 tools: Werkzeuge
+tools.timer: Timer
+
+# Settings
+settings: Einstellungen
+settings/ad.title: Du möchtest Apps programmieren?
+settings/ad.text: Diese App wurde vom MobileDev-Klub mithilfe von Flutter entwickelt. Wir treffen uns regelmäßig und freuen uns auf neue Mitglieder!
+settings/ad.button: Beitreten :)
+settings/ad.link: https://t.me/hpi_mobiledev
+settings/about.version: Version
+settings/about.version.error: Fehler beim Laden der Versionsinformationen
+settings/about.contributors: Mitwirkende
+settings/about.contributors.desc: Felix Auringer, Marcel Garus, Maximilian Stiede, Clemens Tiedt, Ronja Wagner, Jonas Wanke
+settings/about.openSource: Diese App ist Open Source
+settings/about.openSource.link: https://github.com/HPI-de/hpi_flutter
+settings/about.imprint: Impressum
+settings/about.imprint.desc: |-
+  Klub MobileDev des
+  Hasso-Plattner-Institut für Digital Engineering gGmbH
+  Prof.-Dr.-Helmert-Str. 2-3
+  14482 Potsdam
+  Telefon: +49 (0)331 / 5509-0
+  Telefax: +49 (0)331 / 5509-129
+  E-Mail: klub-mobiledeveloper-sprecher@hpi.de
+  Webseite: https://mobiledev.hpi.de
+settings/about.privacyPolicy: Privacy Policy
