--- a/assets/localizations/strings_en.yaml
+++ b/assets/localizations/strings_en.yaml
@@ -85,8 +85,9 @@ settings/about.imprint.desc: |-
   Email: klub-mobiledeveloper-sprecher@hpi.de
   Website: https://mobiledev.hpi.de
 settings/about.privacyPolicy: Privacy Policy
-settings/about.about.name: Hpi-App
-settings/about.legalese: |-
+settings/about.licenses: Licenses
+settings/about.licenses.name: Hpi-App
+settings/about.licenses.legalese: |-
   Copyright 2019 hpi_flutter
 
   Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
