feat(onboarding): create onboarding screens

--- a/assets/localizations/strings_de.yaml
+++ b/assets/localizations/strings_de.yaml
@@ -62,5 +62,31 @@ myhpi/infoBit.parent: Gefunden unter
 # openHPI
 openHpi/fragment.title: openHPI-Kurse
 
+# Onboarding
+onboarding/start.title: Willkommen in der HPI-App!
+onboarding/start.subtitle: Vielen Dank für das Ausprobieren der Betversion der neuen HPI-APP, entwickelt vom MobileDev-Klub.
+onboarding/privacyPolicy.prefix: Ich stimme der
+onboarding/privacyPolicy.suffix: zu.
+onboarding/aboutMyself.title: "Bitte beschreibe dich selbst, um die App an dich anzupassen:"
+onboarding/aboutMyself.text.1: "Ich bin ein/e "
+onboarding/aboutMyself.text.2: " und studiere "
+onboarding/aboutMyself.text.3: " im "
+onboarding/aboutMyself.text.4: "%i."
+onboarding/aboutMyself.text.5:  " Semester"
+onboarding/aboutMyself.text.6: "."
+onboarding/role.student: StudentIn
+onboarding/role.phdStudent: DoktorandIn
+onboarding/role.postdoc: Postdoc
+onboarding/role.prof: ProfessorIn
+onboarding/role.lecturer: DozentIn
+onboarding/role.staff: MitarbeiterIn
+onboarding/courseOfStudies.baItse: BA-ITSE
+onboarding/courseOfStudies.maCs: MA-CS
+onboarding/courseOfStudies.maDe: MA-DE
+onboarding/courseOfStudies.maDh: MA-DH
+onboarding/courseOfStudies.maItse: MA-ITSE
+onboarding/next: Weiter
+onboarding/done: Fertig!
+
 # Tools
 tools: Werkzeuge
