--- a/assets/localizations/strings_en.yaml
+++ b/assets/localizations/strings_en.yaml
@@ -66,8 +66,8 @@ myhpi/infoBit.parent: Found under
 openHpi/fragment.title: openHPI courses
 
 # Onboarding
-onboarding/start.title: Welcome to the HPI-App!
-onboarding/start.subtitle: Thanks for trying out the beta version of the new HPI-App, developed by the MobileDev-Club.
+onboarding/start.title: Welcome to the HPI app!
+onboarding/start.subtitle: Thanks for trying out the beta version of the new HPI app, developed by the MobileDev-Club.
 onboarding/privacyPolicy.prefix: I agree to the
 onboarding/privacyPolicy.suffix: "."
 onboarding/aboutMyself.title: "Please describe yourself to customize this app:"
