fix(course): fix scrolling behaviour of course and courseseries list

--- a/assets/localizations/strings_de.yaml
+++ b/assets/localizations/strings_de.yaml
@@ -31,6 +31,7 @@ course/course.type.lecture: Vorlesung
 course/course.type.seminar: Seminar
 course/course.type.blockSeminar: Blockseminar
 course/course.type.exercise: Übung
+course/course.type.project: Projekt
 course/semester.winter: Wintersemester %i
 course/semester.summer: Sommersemester %i
 
