feat(course, news): add share and open in browser buttons

--- a/assets/localizations/strings_de.yaml
+++ b/assets/localizations/strings_de.yaml
@@ -7,6 +7,8 @@ currency.eur: "%.2f €"
 mode: Mehr…
 language.en: Englisch
 language.de: Deutsch
+share: Teilen
+openInBrowser: Im Browser öffnen
 
 # Dashboard
 dashboard: Übersicht
