--- a/assets/localizations/strings_en.yaml
+++ b/assets/localizations/strings_en.yaml
@@ -7,6 +7,8 @@ currency.eur: "%.2f €"
 mode: More…
 language.en: English
 language.de: German
+share: Share
+openInBrowser: Open in browser
 
 # Dashboard
 dashboard: Dashboard
