--- a/assets/localizations/strings_en.yaml
+++ b/assets/localizations/strings_en.yaml
@@ -136,7 +136,7 @@ settings/about.privacyPolicy: Privacy Policy
 settings/about.licenses: Licenses
 settings/about.licenses.name: Hpi-App
 settings/about.licenses.legalese: |-
-  Copyright 2019 hpi_flutter
+  © 2019 – 2020 hpi_flutter
 
   Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
 
