refactor: use ARB for I18n

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,84 @@
-{}
+{
+  "general_loading": "Loading…",
+  "general_error": "An error occurred. Please try again.",
+  "general_submit": "Submit",
+  "general_sending": "Sending…",
+  "general_currency": "{currency, select, eur {{amount} €}}",
+  "general_more": "More…",
+  "general_language": "{language, select, de {German} en {English}}",
+  "general_share": "Share",
+  "general_openInBrowser": "Open in browser",
+  "dashboard": "Dashboard",
+  "course": "Courses",
+  "course_tab_current": "Current courses",
+  "course_tab_all": "All courses",
+  "course_course_loading": "Loading course…",
+  "course_course_details": "{ects} ECTS · {hoursPerWeek} h/week",
+  "course_course_teleTask": "This course is on tele-TASK",
+  "course_course_programsModules": "Programs & Modules",
+  "course_course_description": "Description",
+  "course_course_requirements": "Requirements",
+  "course_course_learning": "Learning",
+  "course_course_examination": "Examination",
+  "course_course_dates": "Dates",
+  "course_course_literature": "Literature",
+  "course_course_noGuarantee": "All statements without guarantee",
+  "course_course_reportError": "Report an Error",
+  "course_course_type": "{type, select, lecture {Lecture} seminar {Seminar} blockSeminar {Block Seminar} exercise {Exercise} project {Project}}",
+  "course_semester": "{term, select, ss {Summer Term {year}} ws {Winter Term {year}}}",
+  "feedback": "Feedback",
+  "feedback_action": "Send feedback",
+  "feedback_message": "Your message",
+  "feedback_message_missing": "Please enter a message",
+  "feedback_includeLogs": "Include screenshot and logs",
+  "feedback_includeLogs_desc": "Recommended for bugs",
+  "feedback_sent": "Your fedback was submitted. Thanks!",
+  "food": "Food",
+  "food_fragment_title": "Today's menu",
+  "food_offer": "Offer {counter}",
+  "food_noMenu": "Currently, there is no menu data available",
+  "news": "News",
+  "news_article_loading": "Loading article…",
+  "news_article_authors": "AUTHORS",
+  "news_article_categories": "CATEGORIES",
+  "news_article_tags": "TAGS",
+  "myhpi": "MyHPI",
+  "myhpi_infoBit_tags_leading": "Tags:",
+  "myhpi_infoBit_tags_title": "Tags",
+  "myhpi_infoBit_parent": "Found under",
+  "openHpi_fragment_title": "openHPI courses",
+  "onboarding_start_title": "Welcome to the HPI app!",
+  "onboarding_start_subtitle": "Thanks for trying out the beta version of the new HPI app, developed by the MobileDev-Club.",
+  "onboarding_privacyPolicy_prefix": "I agree to the",
+  "onboarding_privacyPolicy_suffix": ".",
+  "onboarding_crashReporting": "Send anonymized crash reports.",
+  "onboarding_aboutMyself_title": "Please describe yourself to customize this app:",
+  "onboarding_aboutMyself_text_1": "I'm a ",
+  "onboarding_aboutMyself_text_2": " studying ",
+  "onboarding_aboutMyself_text_3": " in semester ",
+  "onboarding_aboutMyself_text_4": "{semester}",
+  "onboarding_aboutMyself_text_5": "",
+  "onboarding_aboutMyself_text_6": ".",
+  "onboarding_role": "{role, select, student {student} phdStudent {PhD student} postdoc {postdoc} prof {professor} lecturer {lecturer} staff {staff member}}",
+  "onboarding_courseOfStudies": "{courseOfStudies, select, baItse {BA-ITSE} maCs {MA-CS} maDe {MA-DE} maDh {MA-DH} maItse {MA-ITSE}}",
+  "onboarding_next": "Next",
+  "onboarding_done": "Done!",
+  "tools": "Tools",
+  "tools_timer": "Timer",
+  "settings": "Settings",
+  "settings_ad_title": "Interested in programming apps?",
+  "settings_ad_title_nonStudent": "This app was developed by the MobileDev-Club",
+  "settings_ad_text": "This app was developed by the MobileDev-Club using Flutter. We meet regularly and are looking forward for new members!",
+  "settings_ad_button": "Join us :)",
+  "settings_about_version": "Version",
+  "settings_about_version_error": "Error while loading version information",
+  "settings_about_contributors": "Contributors",
+  "settings_about_openSource": "This app is open source",
+  "settings_about_imprint": "Imprint",
+  "settings_about_imprint_desc": "Hasso Plattner Institute for Digital Engineering gGmbH\nProf.-Dr.-Helmert-Str. 2-3\n14482 Potsdam\n\nTelephone: +49 (0) 331 / 5509-0\nFax: +49 (0) 331 / 5509-129\nE-Mail: hpi-info@hpi.de\nWebsite: www.hpi.de\n\nAuthorized Managing Directors:\nProf. Dr. Christoph Meinel\nRegister court: Amtsgericht Potsdam\nRegistration number: HRB 12184\n\nResponsible for content:\nMobileDev Club, HPI, HPImgzn Club, Mensa Griebnitzsee, Ulf's Café \n\nLegal notice:\nThe MobileDev Club and the Hasso Plattner Institute (HPI) regularly update and review the content of their websites and apps. Despite our utmost care, we can not exclude that individual information on our pages or in this app may be outdated or plainly wrong. Therefore, we cannot be held responsible for timeliness, accuracy and completeness of the published information. The same applies to all websites that are referenced by the HPI pages as well as this app, as well as to content, especially that of third parties, in particular of the HPImgzn club, Mensa Griebnitzsee and Ulf's Café. For all these links and contents the following conditions apply: We expressively declare that we have no influence on the design and content of the linked pages as well as on third-party content in the app. For the content of these linked pages and third-party app content, neither the HPI nor the MobileDev club are responsible. The HPI and the MobileDev club may change or add information at any time without notice. The reuse of information and data, especially the use of texts and illustrations are only permitted after our approval.",
+  "settings_about_privacyPolicy": "Privacy Policy",
+  "settings_about_licenses": "Licenses",
+  "settings_about_licenses_name": "Hpi-App",
+  "settings_about_licenses_legalese": "© 2019 – 2020 hpi_flutter\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.",
+  "settings_repeatOnboarding": "Repeat onboarding"
+}
